--- a/myconfig-center-springboot-starter/pom.xml
+++ b/myconfig-center-springboot-starter/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jin.myrpc.springboot</groupId>
-    <artifactId>myrpc-spring-boot-starter</artifactId>
+    <groupId>com.jin.myconfig.center.springboot</groupId>
+    <artifactId>myconfig-center-springboot-starter</artifactId>
     <version>2.0-SNAPSHOT</version>
     <dependencies>
 
@@ -24,7 +24,16 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.2.2.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-client</artifactId>
@@ -40,9 +49,18 @@
             <artifactId>curator-framework</artifactId>
             <version>2.12.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
