--- a/myconfig-center-springboot-test/pom.xml
+++ b/myconfig-center-springboot-test/pom.xml
@@ -8,10 +8,10 @@
         <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.jin.myrpc</groupId>
-    <artifactId>myrpc-consumer-test</artifactId>
+    <groupId>com.jin.myconfig.center.springboot</groupId>
+    <artifactId>myconfig-center-springboot-test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>myrpc-consumer-test</name>
+    <name>myconfig-center-springboot-test</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -20,17 +20,29 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.jin.myrpc.springboot</groupId>
-            <artifactId>myrpc-spring-boot-starter</artifactId>
+            <groupId>com.jin.myconfig.center.springboot</groupId>
+            <artifactId>myconfig-center-springboot-starter</artifactId>
             <version>2.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.zaxxer</groupId>
+                    <artifactId>HikariCP</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -43,31 +55,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>myrpc-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>myrpc-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
